--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,10 +1,10 @@
-code { 
-    background-color: #333;
-    color: #0AF;
+code {
+    background-color: #DDD;
+    color: #444;
 }
 
 pre {
-    background-color: #222;
+    background-color: #DDD;
     color: #CCC;
 }
 
